--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="Spray Me">
     <meta property="og:type" content="Spray Me">
     <meta property="og:image"
-          content="https://upload.wikimedia.org/wikipedia/commons/2/2b/Hot_chili_red_pepper_icon_emote.png">
+          href="https://raw.githubusercontent.com/tomginsberg/spray/main/chili.png">
     <meta property="og:image:alt" content="Spray Me">
 
     <link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/2/2b/Hot_chili_red_pepper_icon_emote.png">
