--- a/index.html
+++ b/index.html
@@ -89,6 +89,30 @@
     </div>
 
 
+    <div class="fixed flex flex-row justify-center justify-items-center z-50 w-full bottom-16 my-4">
+
+        <button id="start" type="button" class="text-white bg-lime-500 dark:bg-lime-500 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center me-2  dark:focus:ring-blue-800">
+            🔰
+            Start
+        </button>
+
+        <button id="finish" type="button" class="text-white bg-red-700 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center me-2   dark:focus:ring-blue-800">
+            🏁
+            Finish
+        </button>
+
+        <button id="foot" type="button" class="text-white bg-rose-300 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center me-2   dark:focus:ring-blue-800">
+            🦶
+            Foot
+        </button>
+
+        <button id="any" type="button" class="text-white bg-blue-500 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center me-2   dark:focus:ring-blue-800">
+            🪜
+            Any
+        </button>
+    </div>
+
+
 </div>
 
 
